<resources>
    <string name="app_name">FInalProject</string>
    <string name="helloworld">Hello World!</string>
    <string name="enterNicknameHint">Enter your nickname</string>
    <string name="enterPasswordHint">Enter your password</string>
    <string name="signIn">SIGN  IN</string>
    <string name="imageContentDesc">none</string>
    <string name="not_registered">Not Registered?</string>
    <string name="sign_up">SIGN  UP</string>
    <string name="enterStatusHint">What I do</string>
    <string name="logout">SIGN OUT</string>
    <string name="UPDATE">UPDATE</string>
    <string name="profile">Profile</string>
    <string name="main">Main</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_messages">No Messages</string>
</resources>