<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    tools:context=".activities.LoginActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="144dp"
        android:layout_height="144dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/avatar_image_placeholder"
        tools:layout_editor_absoluteY="162dp"
        android:contentDescription="@string/imageContentDesc"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/enterNicknameHint"
        android:id="@+id/nicknameText"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:backgroundTint="@color/editTextColor"
        android:inputType="text"
        android:background="@drawable/roundborder"
        android:autofillHints="">
    </EditText>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enterPasswordHint"
        android:id="@+id/passwordText"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:backgroundTint="@color/editTextColor"
        android:inputType="textPassword"
        android:background="@drawable/roundborder"
        android:autofillHints="">
    </EditText>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enterStatusHint"
        android:id="@+id/workStatusText"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:backgroundTint="@color/editTextColor"
        android:inputType="textPassword"
        android:background="@drawable/roundborder"
        android:autofillHints="">
    </EditText>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundborder"
        android:textColor="@color/white"
        android:id="@+id/signUpBtn"
        android:backgroundTint="@color/signInButton"
        android:text="@string/signIn" />


</LinearLayout>