<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    tools:context=".activities.LoginActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:contentDescription="@string/imageContentDesc"
        android:src="@drawable/unisex_avatar"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="162dp" />

    <TextView
        android:id="@+id/profPageName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundborder"
        android:backgroundTint="@color/editTextColor"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/profPageStatus"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundborder"
        android:backgroundTint="@color/editTextColor"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundborder"
        android:backgroundTint="@color/signInButton"
        android:text="@string/UPDATE"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/roundbordersolid"
        android:text="@string/logout" />

</LinearLayout>